# ds3231_user_space

./: CMakeLists.txt  README.md
Inc/: DS3231.h  SysTime.h
Scripts/: autostart.sh  install.sh
Src/: DS3231.cpp  main.cpp
